# eecs106a-final-project

./: .gitmodules  README.md
106a_labs_test/lab8/src/plannedcntrl/: CMakeLists.txt  package.xml
catkin_ws/.catkin_tools/profiles/default/: devel_collisions.txt
catkin_ws/src/: .rosinstall
catkin_ws/src/abb_libegm/cmake/: abb_libegmConfig.cmake.in
catkin_ws/src/abb_robot_sandbox/: .rosinstall  CMakeLists.txt  README.md  setup.py  setup.rosinstall
catkin_ws/src/abb_robot_sandbox/action/: Control.action  Plan.action
catkin_ws/src/abb_robot_sandbox/cfg/: dynamic_amp.cfg
catkin_ws/src/abb_robot_sandbox/config/: box_collision_spheres.yaml  close_gripper_collision_spheres.yaml  dashboard_collision_spheres.yaml  iiwa14_collision_spheres.yaml  irb4600_collision_spheres.yaml  jsp_vis_col.rviz  kuka_iiwa_params.yaml  obstacle_collision_spheres.yaml  open_gripper_collision_spheres.yaml  test_vis.rviz  ur5.rviz  ur5_box_params.yaml  ur5_box_params.yaml.save  ur5_collision_spheres.yaml  ur5_params.yaml
catkin_ws/src/abb_robot_sandbox/docker/: Dockerfile  README.md  entrypoint.sh  go.sh  run.sh
catkin_ws/src/abb_robot_sandbox/exec/: controller_node.py  dummy_controller_node.py  dummy_pose_estimator_node.py  dummy_sim_node.py  egm_controller_node.cpp  egm_controller_node.py  gripper_joint_state_publisher.py  jsp_vis_collision.py  motion_planner_node.py  rrt_demo.py  rrt_demo_v2.py  rrt_motion_planner_node.py  sim_node.py  task_executor_node.py  test_col_node.py  test_poly_node.py  test_rrt_node.py  test_transforms_node.py  test_vis_node.py  troubleshooting_node.py  ursim_task_executor.py
catkin_ws/src/abb_robot_sandbox/launch/: jsp_vis_col.launch  kinematic_sim.launch  kuka_iiwa.launch  load_ur5_with_gripper.launch  rrt_demo.launch  test_poly.launch  test_rrt.launch  test_transforms.launch  test_vis.launch  troubleshooting_node.launch  ur5.launch  ur5URSim.launch  ur5URSim_box.launch  ur5URSim_jsp.launch
catkin_ws/src/abb_robot_sandbox/meshes/: ATI-9105-Axia80-M20.stl  Connector.stl  FTInterface.stl  FlangeInterface.stl  ISO9409-1-50-4-M6.stl  InterfaceToCoupling.stl  RobotiqEPick.stl  fixed_component.stl  mini_dashboard.dae  moveable_component.stl
catkin_ws/src/abb_robot_sandbox/test/: test-RRTConnect.launch  test_RRTConnect.py
catkin_ws/src/abb_robot_sandbox/urdf/: fixed_component.urdf  irb4600_ford.urdf  moveable_component.urdf  ur5_with_vacuum_gripper.xacro  ur_with_gripper.xacro
catkin_ws/src/ay_py/: CMakeLists.txt  package.xml  setup.py
catkin_ws/src/ay_util/ay_util/: CMakeLists.txt  CMakeLists.txt.backup  README.md  manifest.xml.backup
catkin_ws/src/ay_util/ay_util/config/: mikata.rviz  ur3.rviz  ur3e_125hz_controllers.yaml
catkin_ws/src/ay_util/ay_util/launch/: ar_track_ext_xtion.launch  robotiq.launch
catkin_ws/src/ay_util/ay_util/launch/baxter/: bx_calib_ext_xtion.launch  bx_calib_wl_m100.launch  bx_calib_wr_stereo.launch  bx_real.launch  bx_real_n.launch  bx_sim1.launch  bx_sim2.launch  bx_sim_world.launch  bx_state_validity_checker.launch
catkin_ws/src/ay_util/ay_util/launch/cranex7/: cranex7_cmn.launch  cranex7_ksim.launch  cranex7_real.launch
catkin_ws/src/ay_util/ay_util/launch/gen3/: gen3_real.launch  gen3_state_validity_checker.launch
catkin_ws/src/ay_util/ay_util/launch/mikata/: mikata_cmn.launch  mikata_ksim.launch  mikata_real.launch  mikata_real2.launch  mikata_rot_cmn.launch  mikata_rot_ksim.launch  mikata_rot_real.launch  mikata_rot_real2.launch  mikata_state_validity_checker.launch
catkin_ws/src/ay_util/ay_util/launch/mikata6/: mikata6_cmn.launch  mikata6_ksim.launch  mikata6_real.launch
catkin_ws/src/ay_util/ay_util/launch/motoman/: motomansia10f_cmn.launch  motomansia10f_ksim.launch  motomansia10f_real.launch
catkin_ws/src/ay_util/ay_util/launch/pr2/: gz_pr2_sim.launch  lfd_teleop_joystick2.launch  pr2_real_l.launch  pr2_sim_l.launch  pr2_state_validity_checker.launch
catkin_ws/src/ay_util/ay_util/launch/ur/: ur3_ksim.launch  ur3_real.launch  ur3e_125hz_real.launch  ur3e_ksim.launch  ur3e_real.launch  ur5e_ksim.launch  ur5e_real.launch  ur_calib.launch  ur_gripper_reboot.launch  ur_gripper_selector.launch  ur_selector.launch
catkin_ws/src/ay_util/ay_util/meshes/: m100_clamp_mount.blend  m100_clamp_mount.stl
catkin_ws/src/ay_util/ay_util/scripts/: AandDEW_weight.py  cranex7_gui.py  dummy_robot.py  dxlg_driver.py  dxlg_gui.py  dxlg_gui_odroid.py  dxlg_reboot.py  fix_usb_latency.sh  fix_uvc_video.sh  mikata_driver.py  mikata_gui.py  mikata_gui_odroid.py  mikata_panel.py  rs_sim.py  ur_dashboard_gui.py  ur_gui.py  ur_panel.py  wrench_filter.py
catkin_ws/src/ay_util/ay_util/scripts/baxter/: bx_gui.py  bx_off_bodyavd.py  bx_set_gripw.py
catkin_ws/src/ay_util/ay_util/scripts/robotiq/: robotiq_rtu_ctrl.py  rqnb_calib.py  rqnb_gui.py
catkin_ws/src/ay_util/ay_util/src_ros/: README.md  state_validity_checker_node.cpp
catkin_ws/src/ay_util/ay_util/urdf/: m100_clamp_mount.urdf.xacro  pr2_moveit_planning_context.launch  pr2_w_m100.urdf.xacro  upload_pr2_m100.launch
catkin_ws/src/ay_util/ay_util_msgs/: CMakeLists.txt  README.md  manifest.xml.backup  package.xml
catkin_ws/src/ay_util/ay_util_msgs/srv/: DxlGMove.srv  DxlIO.srv
catkin_ws/src/fingervision/fingervision/: CMakeLists.txt  package.xml
catkin_ws/src/fingervision/fingervision/config/: fv_1.yaml
catkin_ws/src/fingervision/fingervision/data_gen/: blob_fv_1.yaml
catkin_ws/src/fingervision/fingervision/launch/: fv_1.launch
catkin_ws/src/fingervision/fingervision_msgs/: CMakeLists.txt  package.xml
catkin_ws/src/fingervision/fv_core/: blob_tracker2.cpp
catkin_ws/src/fingervision/standalone/: blob_tracker2_test.out  capture.out
catkin_ws/src/fingervision/tools/: conf_elp.sh
catkin_ws/src/moveit_test/: CMakeLists.txt  package.xml
catkin_ws/src/ucb_ur_launch/: CMakeLists.txt  package.xml
catkin_ws/src/ur5_rrt_control/: CMakeLists.txt  README.md  package.xml
final_project/src/movement/: CMakeLists.txt  package.xml  ur5_moveit_camera.launch
final_project/src/robotiq/: .pre-commit-config.yaml  .travis.yml
final_project/src/vision/: turtlebot_control.py
(+40 files in other folders)
