<?xml version="1.0"?>
<package>
  <name>ay_py</name>
  <version>0.0.0</version>
  <description>
    The ay_py package
  </description>
  <license>
    Apache License, Version 2.0
  </license>
  <author email="info@akihikoy.net">
    Akihiko Yamaguchi
  </author>
  <maintainer email="info@akihikoy.net">
    Akihiko Yamaguchi
  </maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>

  <export>
  </export>
</package>
