<?xml version="1.0"?>
<package>
  <name>fingervision</name>
  <version>0.0.0</version>
  <description>
    The fingervision package
  </description>
  <license>
    Apache License, Version 2.0
  </license>
  <author email="info@akihikoy.net">
    Akihiko Yamaguchi
  </author>
  <maintainer email="info@akihikoy.net">
    Akihiko Yamaguchi
  </maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>fingervision_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>camera_info_manager</build_depend>
  <build_depend>cv_bridge</build_depend>
  <run_depend>fingervision_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>camera_info_manager</run_depend>
  <run_depend>cv_bridge</run_depend>

  <export>
    <cpp cflags="-I${prefix}/include -I${prefix}/../3rdparty" lflags="-L${prefix}/lib"/>
  </export>
</package>
