<?xml version="1.0"?>
<package>
  <name>fingervision_msgs</name>
  <version>0.0.0</version>
  <description>
    The fingervision_msgs package
  </description>
  <license>
    Apache License, Version 2.0
  </license>
  <author email="info@akihikoy.net">
    Akihiko Yamaguchi
  </author>
  <maintainer email="info@akihikoy.net">
    Akihiko Yamaguchi
  </maintainer>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>
  <export></export>
</package>
